// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`util/http/index deleteJson 1`] = `
Object {
  "authorization": false,
  "body": Object {},
  "headers": Object {
    "content-type": "application/json",
  },
  "statusCode": 200,
}
`;

exports[`util/http/index get 1`] = `
Object {
  "authorization": false,
  "body": "",
  "headers": Object {},
  "statusCode": 200,
}
`;

exports[`util/http/index getJson 1`] = `
Object {
  "authorization": false,
  "body": Object {
    "test": true,
  },
  "headers": Object {},
  "statusCode": 200,
}
`;

exports[`util/http/index headJson 1`] = `
Object {
  "authorization": false,
  "body": Object {},
  "headers": Object {
    "content-type": "application/json",
  },
  "statusCode": 200,
}
`;

exports[`util/http/index patchJson 1`] = `
Object {
  "authorization": false,
  "body": Object {},
  "headers": Object {
    "content-type": "application/json",
  },
  "statusCode": 200,
}
`;

exports[`util/http/index postJson 1`] = `
Object {
  "authorization": false,
  "body": Object {},
  "headers": Object {
    "content-type": "application/json",
  },
  "statusCode": 200,
}
`;

exports[`util/http/index putJson 1`] = `
Object {
  "authorization": false,
  "body": Object {},
  "headers": Object {
    "content-type": "application/json",
  },
  "statusCode": 200,
}
`;

exports[`util/http/index retries 1`] = `
Object {
  "authorization": false,
  "body": "",
  "headers": Object {
    "x-some-header": "abc",
  },
  "statusCode": 200,
}
`;
